updating buildspec yaml file

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
           - 'npm run build'
       post_build:
         commands:
-          -'aws s3 sync "public/" "s3://<ENTER YOUR BUCKET NAME>" --delete --acl "public-read"'
+          -'aws s3 sync "public/" "s3://www.cameronbillings.com" --delete --acl "public-read"'
 'articfacts':
   base-directory: public
   files:
