--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,10 @@ phases:
       build:
         commands:
           - 'npm run build'
-'articfacts':
+      post_build:
+        commands:
+          -'aws s3 sync "public/" "s3://www.cameronbillings.com" --delete --acl "public-read"'
+articfacts:
   base-directory: public
   files:
     - '**/*'
